<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackround"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="188dp"
        android:layout_height="50dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="39dp"
        android:text="@string/task"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <EditText
        android:id="@+id/editTextTaskName"
        android:layout_width="304dp"
        android:layout_height="53dp"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:hint="@string/task_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:text="@string/default_task_name"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextTaskName" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="58dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="85dp"
        android:layout_height="43dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/work_timer_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="85dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/minutes"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskName" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="58dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="85dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/break_timer_text"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="85dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/minutes"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber3"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>
