<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackround">

    <Button
        android:id="@+id/button_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="@+id/button_pause"
        app:layout_constraintEnd_toEndOf="@+id/text_task_title" />

    <Button
        android:id="@+id/button_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_task_title"
        app:layout_constraintTop_toBottomOf="@+id/text_task_name" />

    <TextView
        android:id="@+id/text_task_title"
        android:layout_width="279dp"
        android:layout_height="65dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_task_name"
        android:layout_width="315dp"
        android:layout_height="168dp"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_task_title"
        app:layout_constraintStart_toStartOf="@+id/text_task_title"
        app:layout_constraintTop_toBottomOf="@+id/text_task_title"
        app:layout_constraintVertical_bias="0.498" />

    <TextView
        android:id="@+id/text_timer"
        android:layout_width="85dp"
        android:layout_height="42dp"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:text="@string/_13_37"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/text_task_name"
        app:layout_constraintEnd_toEndOf="@+id/text_task_title"
        app:layout_constraintStart_toStartOf="@+id/text_task_title"
        app:layout_constraintTop_toBottomOf="@+id/text_task_title"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
